@@ -55,6 +55,11 @@ wxChoice.
 
 Constructor taking a wxArrayInt pointer. This will be used for wxListBox, wxCheckListBox.
 
+\func{}{wxGenericValidator}{\param{wxDateTime*}{ valPtr}}
+
+Constructor taking a \helpref{wxDateTime}{wxdatetime} pointer. This will be
+used for \helpref{wxDatePickerCtrl}{wxdatepickerctrl}.
+
 \wxheading{Parameters}
 
 \docparam{validator}{Validator to copy.}
